# opencypher-coq

./: .Makefile.coq.local.d  .gitignore  Compile_with_coq8.13.sh  Makefile  Makefile.coq.local  OpencypherCoq.BindingTable.html  OpencypherCoq.Cypher.html  OpencypherCoq.EvalExamples.html  OpencypherCoq.ExecutionPlan.html  OpencypherCoq.ExecutionPlanImpl.html  OpencypherCoq.Maps.html  OpencypherCoq.PGMatrixExtraction.html  OpencypherCoq.PatternE.html  OpencypherCoq.PropertyGraph.html  OpencypherCoq.Queries.html  OpencypherCoq.RAUtils.html  OpencypherCoq.Semantics.html  OpencypherCoq.Statements.html  OpencypherCoq.Translation.html  OpencypherCoq.Translation2.html  OpencypherCoq.TraverseOpImpl.html  OpencypherCoq.Utils.html  README.md  configure.sh  coq-cypher.opam  coq-huffman.opam  coq.ctags  coq.opam  dune-project  indexpage.html  make_switch.sh  meta.yml  toc.html
docs/: OpencypherCoq.Basics.html  OpencypherCoq.Cypher.html  OpencypherCoq.EvalExamples.html  OpencypherCoq.KleeneTranslation.html  OpencypherCoq.Maps.html  OpencypherCoq.PGMatrixExtraction.html  OpencypherCoq.PropertyGraph.html  OpencypherCoq.Queries.html  OpencypherCoq.Utils.html  index.html  index.md  indexpage.html  toc.html
resources/: index.md
src/: .lia.cache  Algebra.v  Basic.v  Basics.v  BindingTable.v  Computing.v  Cypher.v  EvalExamples.v  ExecutionPlan.v  ExecutionPlanImpl.v  ForeignGraphRuntime.v  KleeneTranslation.v  Maps.v  NRATranslation.v  PGMatrixExtraction.v  PGTableExtraction.v  PatternE.v  PropertyGraph.v  Queries.v  RAUtils.v  Relation.v  Semantics.v  Statements.v  Translation.v  dune  (+4 more)
(+9 files in other folders)
